--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,24 @@
 [tool.poetry]
-name = "new-project"
-version = "0.1.0"
-description = "New Project"
-authors = ["Projects Team <projects@digilab.ai>"]
+name = "uncertainty-engine-helper"
+version = "0.0.1"
+description = "Utility helpers for the Uncertainty Engine ecosystem."
+authors = ["Daniel Greenhouse <dan.greenhouse@digilab.ai>"]
 readme = "README.md"
-package-mode = false  # Comment to enable package mode
-# packages = [
-#     { include = "my_package", from = "src" },  # Include a package from src directory
-#     { include = "extra_package/**/*.py" },
-# ]  # To include extra packages outside the named package directory
 
 [tool.poetry.dependencies]
-python = ">=3.12,<3.13"
+python = ">=3.9,<3.13"
+
+
+dependencies = [
+  "uncertainty-engine[vis,notebook]",
+  "matplotlib",
+  "numpy",
+  "seaborn",
+  "pandas"
+]
+
+[project.urls]
+Homepage = "https://github.com/digiLab-ai/uncertainty-engine-sdk-helper"
 
 [tool.poetry.group.dev.dependencies]
 black = "^25.1.0"
@@ -22,5 +29,12 @@ pytest = "^8.4.0"
 python-dotenv = "^1.0.1"
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["setuptools>=69", "wheel"]
+build-backend = "setuptools.build_meta"
+
+
+[tool.setuptools]
+package-dir = {"" = "src"}
+
+[tool.setuptools.packages.find]
+where = ["src"]
