Update helper functions ready for workflow tidy-up

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ python = ">=3.9,<3.13"
 uncertainty-engine = { version = "*", extras = ["vis", "notebook"] }
 matplotlib = "*"
 numpy = "*"
+scipy = "*"
 seaborn = "*"
 pandas = "*"
 python-dotenv = "*"
